--- a/app/src/main/res/layout/items_user_main.xml
+++ b/app/src/main/res/layout/items_user_main.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_height="wrap_content"
-              android:layout_width="wrap_content"
-              android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              tools:text="Default"
-              android:id="@+id/tv_user_name"
-              android:textAlignment="center"
-    />
+    <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="vertical">
 
-</LinearLayout>
+        <TextView android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  tools:text="Default"
+                  android:id="@+id/tv_user_name"
+                  android:textAlignment="center"
+        />
+
+    </LinearLayout>
+</layout>
