--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,10 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <TextView
-                android:id="@+id/textview_hello"
+        <FrameLayout
+                android:id="@+id/main_frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Hello World !"
-                android:textSize="20dp"
-                android:textAlignment="center"/>
+                android:layout_height="wrap_content"/>
 
         <EditText
                 android:id="@+id/edit_text_data"
