--- a/app/src/main/res/layout/items_user_main.xml
+++ b/app/src/main/res/layout/items_user_main.xml
@@ -10,8 +10,7 @@
                   android:layout_height="wrap_content"
                   tools:text="Default"
                   android:id="@+id/tv_user_name"
-                  android:textAlignment="center"
-        />
+                  android:textAlignment="center" />
 
     </LinearLayout>
 </layout>
